--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -22,5 +22,6 @@ dependencies {
     compile "com.android.support:cardview-v7:$androidSupportVersion"
     compile "com.android.support:design:$androidSupportVersion"
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile files('libs/volley.jar')
 }
