--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
     compile files('libs/volley.jar')
+    compile 'com.idescout.sql:sqlscout-server:2.0'
 }
